@@ -83,6 +83,48 @@ and <code>javax.security.cert</code> support), we recommend
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>March 9, 2006</b>
+</td><td>
+Mark Wielaard has imported <a
+href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.90 into GCJ.
+</td></tr>
+
+<tr><td valign="top">
+<b>February 8, 2006</b>
+</td><td>
+Mark Wielaard has written &quot;<a href="http://lwn.net/Articles/171139/">A
+look at GCJ 4.1</a>&quot; for <a href="http://lwn.net/">LWN.net</a>.
+</td></tr>
+
+<tr><td valign="top">
+<b>July 15, 2005</b>
+</td><td>
+Tom Tromey has <a
+href="http://gcc.gnu.org/ml/java-patches/2005-q3/msg00093.html">integrated</a>
+<a href="http://www.gnu.org/software/classpath/">GNU Classpath</a> into the
+GCJ build in such a way that it becomes <a
+href="http://gcc.gnu.org/ml/java/2005-05/msg00202.html">much easier</a> to
+import the latest GNU Classpath into GCJ.
+</td></tr>
+
+<tr><td valign="top">
+<b>April 6, 2005</b>
+</td><td>
+Mark Wielaard has written &quot;<a
+href="http://lwn.net/Articles/130796/">GCJ - past, present, and
+future</a>&quot; for <a href="http://lwn.net/">LWN.net</a>.
+</td></tr>
+
+<tr><td valign="top">
+<b>March 10, 2005</b>
+</td><td>
+Bryce McKinlay has merged in <a
+href="http://gcc.gnu.org/ml/java-patches/2005-q1/msg00712.html">a new stack
+trace mechanism</a> that is based on GCC's unwind support and provides
+cleaner and faster stack traces.
+</td></tr>
+
+<tr><td valign="top">
 <b>February 15, 2005</b>
 </td><td>
 Thomas Fitzsimmons has checked in an implementation of libjawt, the
