@@ -1,3 +1,8 @@
+2006-05-12  Ranjit Mathew  <rmathew@gcc.gnu.org>
+
+	* index.html: Add back-dated news entries to reflect ongoing
+	improvements to GCJ.
+
 2006-02-09  Tom Tromey  <tromey@redhat.com>
 
 	* done.html: Added H2 Database Engine.
